Remove Livereload Add live-server Update npm packages Add sass 7-1 architecture pattern Add sourcemaps

--- a/src/index.html
+++ b/src/index.html
@@ -3,8 +3,8 @@
 	<head>
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta http-equiv="x-ua-compatible" content="ie=edge" />
-		<script src="./assets/js/main.min.js" charset="utf-8"></script>
-		<link rel="stylesheet" href="./assets/css/main.min.css" />
+		<script src="./js/main.js" charset="utf-8"></script>
+		<link rel="stylesheet" href="./css/main.css" />
 	</head>
 
 	<body>
@@ -25,9 +25,9 @@
 				<img src="./assets/svg/dimensions.svg" alt="world" width="50" />
 
 				<h2>Image</h2>
-				<img src="./assets/image/halo.jpeg" alt="Halo" />
-				<img src="./assets/image/nierautomata.png" alt="Nier Automata" />
-				<img src="./assets/image/kyoto.jpeg" alt="Kyoto" />
+				<img src="./assets/img/halo.jpeg" alt="Halo" />
+				<img src="./assets/img/nierautomata.png" alt="Nier Automata" />
+				<img src="./assets/img/kyoto.jpeg" alt="Kyoto" />
 			</div>
 		</div>
 	</body>
